--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -16,7 +16,7 @@
         bottom: 0;
         right: 0;
         left: 0;
-        height: 450px;
+        height: 370px;
 
         .login-content {
             padding: 10px;
@@ -53,6 +53,18 @@
                 color: white;
                 font-weight: 600;
                 background: linear-gradient(135deg, rgba(34, 193, 95, 1) 0%, rgba(253, 187, 45, 1) 100%);
+            }
+
+            .btn-create-new-account {
+                width: 100%;
+                    margin: 10px 0px;
+                    height: 35px;
+                    border-radius: 15px;
+                    outline: none;
+                    border: none;
+                    color: white;
+                    font-weight: 600;
+                    background: rgb(53, 162, 174);
             }
 
             .forgot-password {
