--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -8,6 +8,12 @@
     color: $common-text-color;
     height: 40px;
     position: relative;
+
+    .header-chatting {
+        text-align: center;
+        margin: 5px 20px;
+        font-size: 20px;
+    }
     .btn-logout {
         color: $common-text-color;
         line-height: 40px;
